syntax = "proto3";

package grpc_parameter.v1;

import "backend/internal/1_framework/parameter/grpc/common.proto";

option go_package = "internal/grpc";

service PersonService {
  rpc GetPersonListByCondition(GetPersonListByConditionRequest) returns (GetPersonListByConditionResponse);
}

message GetPersonListByConditionRequest {
  optional V1CommonParameter v1_common_parameter = 1;
  V1PersonParameter v1_person_parameter = 2;
}

message GetPersonListByConditionResponse {
  V1CommonParameter v1_common_parameter = 1;
  V1PersonParameterArray v1_person_parameter_array = 2;
}

message V1PersonParameter {
  optional uint32 id = 2;
  optional string name = 3;
  optional string mail_address = 4;
}

message V1PersonParameterArray {
  repeated V1PersonParameter persons = 2;
}
